--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 .card{
     border-top: 7px solid red;
     border-radius: 0px 0px 5px 5px;
-    color: #000;
+    color: #2A2829;
     width: 60vh;
     padding: 25px;
     box-shadow: 2px 5px 34px -4px rgba(0,0,0,0.65);
@@ -29,7 +29,7 @@ h1{
 
 p{
     font-size: 15px;
-    color: rgb(117, 104, 104);
+    color: #DBD9DA;
 }
 
 
